<resources>
    <string name="app_name">Milionerzy</string>
    <string name="pyt_12">1 000 000</string>
    <string name="pyt_11">500 000</string>
    <string name="pyt_10">250 000</string>
    <string name="pyt_9">125 000</string>
    <string name="pyt_8">75 000</string>
    <string name="pyt_7">40 000</string>
    <string name="pyt_6">20 000</string>
    <string name="pyt_5">10 000</string>
    <string name="pyt_4">5 000</string>
    <string name="pyt_3">2 000</string>
    <string name="pyt_2">1 000</string>
    <string name="pyt_1">500</string>
    <string name="the_best">Wynik</string>

</resources>