<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient">


    <TextView
        android:id="@+id/BTextView"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="530dp"
        android:layout_marginEnd="39dp"
        android:background="@color/def"
        android:gravity="center"
        android:onClick="answer"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/ATextView"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="530dp"
        android:background="@color/def"
        android:gravity="center"
        android:onClick="answer"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/CTextView"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="50dp"
        android:background="@color/def"
        android:gravity="center"
        android:onClick="answer"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/DTextView"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="50dp"
        android:background="@color/def"
        android:gravity="center"
        android:onClick="answer"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="370dp"
        android:layout_marginBottom="200dp"
        android:background="@color/def"
        android:gravity="center"
        android:paddingHorizontal="15sp"
        android:paddingVertical="7sp"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/yesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fiftyImageView"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="1dp"
        android:onClick="use_fifty"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/questionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903"
        app:srcCompat="@drawable/fifty"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/changeImageView"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="265dp"
        android:layout_marginBottom="1dp"
        android:onClick="use_change"
        app:layout_constraintBottom_toTopOf="@+id/questionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"
        app:srcCompat="@drawable/change"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        android:onClick="playAgain"
        android:text="tak"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView"
        tools:text="tak" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="10dp"
        android:onClick="menu"
        android:text="nie"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/yesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTextView" />

    <TableLayout
        android:id="@+id/levelsTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:clickable="false"
        android:contextClickable="false"
        app:layout_constraintBottom_toTopOf="@+id/changeImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/tRow1"
            android:background="#1405EA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:tag="1000000">

            <TextView
                android:id="@+id/pyt_12"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_12"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1405EA"
            android:layout_marginBottom="2dp"
            android:tag="500000">

            <TextView
                android:id="@+id/pyt_11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_11"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#1405EA"
            android:tag="250000">

            <TextView
                android:id="@+id/pyt_10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_10"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#1405EA"
            android:tag="125000">

            <TextView
                android:id="@+id/pyt_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_9"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1405EA"
            android:layout_marginBottom="2dp"
            android:tag="75000">

            <TextView
                android:id="@+id/pyt_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_8"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#1405EA"
            android:tag="40000">

            <TextView
                android:id="@+id/pyt_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_7"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#1405EA"
            android:tag="20000">

            <TextView
                android:id="@+id/pyt_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_6"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#1405EA"
            android:tag="10000">

            <TextView
                android:id="@+id/pyt_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_5"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#1405EA"
            android:tag="5000">

            <TextView
                android:id="@+id/pyt_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_4"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1405EA"
            android:layout_marginBottom="2dp"
            android:tag="2000">

            <TextView
                android:id="@+id/pyt_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_3"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#1405EA"

            android:tag="1000">

            <TextView
                android:id="@+id/pyt_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_2"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:background="#1405EA"
            android:tag="500">

            <TextView
                android:id="@+id/pyt_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/pyt_1"
                android:textAlignment="center"
                android:textColor="#FFD600"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/giveUpButton"
        android:layout_width="98dp"
        android:layout_height="48dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="22dp"
        android:onClick="giveUp"
        android:text="Poddaj"
        android:textColor="#D1C4E9"
        app:layout_constraintBottom_toTopOf="@+id/questionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/changeImageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/fiftyImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelsTable"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>